force-app/main/default/objects/copado__Default_Persona_Permission__mdt/copado__Default_Persona_Permission__mdt.object-meta.xml
<CustomObject>
    <label>Default Persona Permission</label>
    <pluralLabel>Default Persona Permissions</pluralLabel>
</CustomObject>