force-app/main/default/objects/copado__Default_Persona_Permission__mdt/fields/copado__Default_Persona__c.field-meta.xml
<CustomField>
    <fullName>copado__Default_Persona__c</fullName>
    <label>Default Persona</label>
    <referenceTo>copado__Default_Persona__mdt</referenceTo>
    <relationshipLabel>Default Persona Permissions</relationshipLabel>
    <relationshipName>Default_Persona_Permissions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>