force-app/main/default/objects/copado__Default_Persona_Permission__mdt/fields/copado__Type__c.field-meta.xml
<CustomField>
    <fullName>copado__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CustomPermission</fullName>
                <default>true</default>
                <label>Custom Permission</label>
            </value>
            <value>
                <fullName>CopadoLicense</fullName>
                <label>Copado License</label>
            </value>
            <value>
                <fullName>PermissionSet</fullName>
                <label>Permission Set</label>
            </value>
            <value>
                <fullName>PermissionSetGroup</fullName>
                <label>Permission Set Group</label>
            </value>
            <value>
                <fullName>CredentialAccessLevel</fullName>
                <label>Credential Access Level</label>
            </value>
            <value>
                <fullName>PackageLicense</fullName>
                <label>Package License</label>
            </value>
            <value>
                <fullName>AppPermission</fullName>
                <label>App Permission</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>