force-app/main/default/objects/copado__Default_Persona_Permission__mdt/listViews/copado__All_Default_Persona_Permissions.listView-meta.xml
<ListView>
    <fullName>copado__All_Default_Persona_Permissions</fullName>
    <columns>copado__Default_Persona__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>copado__Type__c</columns>
    <columns>copado__Value__c</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>All Default Persona Permissions</label>
    <language>en_US</language>
</ListView>